Fix: All pages except light and dark mode.

--- a/ninjafood/assects/css/dark-mode.css
+++ b/ninjafood/assects/css/dark-mode.css
@@ -71,7 +71,7 @@
 .email-id{
     width: 50px;
     height: 50px;
-    border-radius: 100px;
+    border-radius: 50%;
     background-image: url(../image/id.png);
     background-color: #fff;
     background-position: center;
